--- a/Spring_first_project/src/main/webapp/WEB-INF/web.xml
+++ b/Spring_first_project/src/main/webapp/WEB-INF/web.xml
@@ -12,31 +12,35 @@
 
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
 	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+		<listener-class>org.springframework.web.context.ContextLoaderListener
+		</listener-class>
 	</listener>
 
 	<!-- Processes application requests -->
 	<servlet>
 		<servlet-name>appServlet</servlet-name>
-		<!-- DispatcherServlet : 스프링에 내장된 서블릿 클래스-->
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<!-- DispatcherServlet : 스프링에 내장된 서블릿 클래스 -->
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet
+		</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
 			<!-- /WEB-INF/spring/appServlet/servlet-context.xml을 참조 -->
-            <!-- xml 파일 안에 정의된 객체들을 로딩한다. -->
-			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
+			<!-- xml 파일 안에 정의된 객체들을 로딩한다. -->
+			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml
+			</param-value>
 		</init-param>
 		<!-- 가장 첫번째 우선순위를 뜻한다. -->
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>
-		<url-pattern>/</url-pattern> <!-- 모든 url요청이 들어오면 DispatcherServlet로 이동  -->
+		<url-pattern>/</url-pattern> <!-- 모든 url요청이 들어오면 DispatcherServlet로 이동 -->
 	</servlet-mapping>
 	<!-- 한글 처리를 위한 인코딩 필터 설정 : 스프링에 내장된 필터 -->
 	<filter>
 		<filter-name>encoding</filter-name>
-		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter
+		</filter-class>
 		<init-param>
 			<param-name>encoding</param-name>
 			<param-value>UTF-8</param-value>
@@ -46,8 +50,11 @@
 		<filter-name>encoding</filter-name>
 		<url-pattern>/*</url-pattern> <!-- 모든 패턴(url) -->
 		<!-- DispatcherServlet이 모든 요청을 가로챌 수 있도록 등록 -->
-        <!-- 특정 url으로 변경하여 사용가능 ex) *.do -->
+		<!-- 특정 url으로 변경하여 사용가능 ex) *.do -->
 	</filter-mapping>
-	
+	<welcome-file-list>
+		<welcome-file>main.jsp</welcome-file>
+	</welcome-file-list>
+
 
 </web-app>
